# NeuroOil

./: .gitignore  .~lock.Volve production data.csv#  DEPLOY.md  HOW_TO_START.txt  README.md  README_WINDOWS.md  START.bat  Volve production data.csv  model_info.pkl  oil_production_model.keras  predict.py  pyproject.toml  requirements.txt  run.sh  scaler.pkl  start.sh  start_local.sh  train_model.py
.github/workflows/: deploy.yml
backend/: requirements.txt  run_backend.sh
backend/app/: main.py  models.py  prediction.py  training.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: CorrelationPlot.tsx  FeatureImportanceChart.tsx  FileUpload.tsx  NeuralNetworkViz.tsx  PredictionFeatureImportance.tsx  PredictionSliders.tsx  TrainingDashboard.tsx
frontend/src/hooks/: useTrainingProgress.ts
frontend/src/pages/: PredictionPage.tsx  TrainingPage.tsx
frontend/src/utils/: api.ts  formatNumber.ts  localStorage.ts
