[project]
name = "neuro-oil"
version = "0.1.0"
description = "Neural network for oil production prediction"
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

